<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="My Account">
        <menu>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_orders" />
        </menu>
        </item>
    </group>

    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_faq" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_email" />

            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_call" />
        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_rate" />

            <item
                android:id="@+id/nav_appinfo"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_appinfo" />
        </menu>
    </item>

</menu>
